--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     max-width: 1000px;
     min-height: 1000px;
     background: #fff;
+    margin: 50px;
     display: grid;
     grid-template-columns: 1fr 2fr;
     box-shadow: 0 35px rgba(0, 0, 0, 0.1);
@@ -30,6 +31,37 @@ body {
     position: relative;
     background: #003147;
     padding: 40px;
+}
+
+.profiletext {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.profiletext .imgBx {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    overflow: hidden;
+}
+
+.profiletext .imgBx img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.profiletext h2 {
+    color: #fff;
+    font-size: 1.5em;
 }
 
 .container .rightside {
