--- a/style.css
+++ b/style.css
@@ -61,8 +61,19 @@ body {
 
 .profiletext h2 {
     color: #fff;
-    font-size: 1.5em;
+    font-size: 1.3em;
+    margin-top: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 600;
+    line-height: 1.4em;
 }
+
+.profiletext h2 span {
+    font-size: 0.8em;
+    font-weight: 300;
+}
+
 
 .container .rightside {
     position: relative;
