--- a/style.css
+++ b/style.css
@@ -74,6 +74,40 @@ body {
     font-weight: 300;
 }
 
+.contactinfo {
+    padding-top: 40px;
+}
+
+.title {
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+.contactinfo ul {
+    position: relative;
+
+}
+
+.contactinfo ul li {
+    position: relative;
+    list-style: none;
+    margin: 10px 0;
+    cursor: pointer;
+}
+
+.contactinfo ul li .icon {
+    display: inline-block;
+    width: 30px;
+    font-size: 18px;
+    color: #03a9f4;
+}
+
+.contactinfo ul li span {
+    color: #fff ;
+    font-weight: 300;
+}
 
 .container .rightside {
     position: relative;
